added put request swagger
