# server/swagger/auth/authPaths.ts
@@ -1,0 +1,89 @@
+export const authPaths = {
+  "/api/auth/register": {
+    post: {
+      tags: ["Auth"],
+      summary: "User registration",
+      description: "Register a new user",
+      requestBody: {
+        description: "Registration details",
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+              $ref: "#/components/schemas/Registration",
+            },
+          },
+        },
+      },
+      responses: {
+        "201": {
+          description: "User registered",
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/ResponseRegister",
+              },
+            },
+          },
+        },
+        "409": {
+          description: "Conflict - Email already exists",
+        },
+      },
+    },
+  },
+  "/api/auth/login": {
+    post: {
+      tags: ["Auth"],
+      summary: "User login",
+      description: "Authenticate a user and return a token",
+      requestBody: {
+        description: "Login details",
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+              $ref: "#/components/schemas/Login",
+            },
+          },
+        },
+      },
+      responses: {
+        "201": {
+          description: "Successful login",
+          content: {
+            "application/json": {
+              schema: {
+                $ref: "#/components/schemas/ResponseLogin",
+              },
+            },
+          },
+        },
+        "401": {
+          description: "Unauthorized",
+        },
+      },
+    },
+  },
+
+  "/api/auth/logout": {
+    post: {
+      tags: ["Auth"],
+      summary: "User logout",
+      description: "Log out the current user",
+      responses: {
+        "200": {
+          description: "Successful logout",
+          schema: {
+            type: "object",
+            properties: {
+              message: {
+                type: "string",
+              },
+            },
+          },
+        },
+      },
+    },
+  },
+};
